fix: fix inmutable exception when execute new order event